@@ -49,6 +49,22 @@ $db['port']    = file_env('IPAM_DATABASE_PORT',    $db['port']);
 $db['webhost'] = file_env('IPAM_DATABASE_WEBHOST', $db['webhost']);
 
 /**
+ * Reverse proxy settings
+ *
+ * If operating behind a reverse proxy set IPAM_TRUST_X_FORWARDED=true to accept the following headers
+ *
+ * WARNING! These headers shoud be filtered and/or overwritten by the reverse-proxy to avoid potential abuse by end-clients.
+ *
+ *   X_FORDWARDED_FOR
+ *   X_FORDWARDED_HOST
+ *   X_FORDWARDED_PORT
+ *   X_FORDWARDED_PROTO
+ *   X_FORDWARDED_SSL
+ *   X_FORWARDED_URI
+ */
+$trust_x_forwarded_headers = filter_var(file_env('IPAM_TRUST_X_FORWARDED', $trust_x_forwarded_headers), FILTER_VALIDATE_BOOLEAN);
+
+/**
  * proxy connection details
  ******************************/
 $proxy_enabled  = file_env('PROXY_ENABLED',  $proxy_enabled);
@@ -82,3 +98,9 @@ $cookie_samesite = file_env('COOKIE_SAMESITE', $cookie_samesite);
  * @var string
  */
 $session_storage = "database";
+
+
+/**
+ * General tweaks
+ ******************************/
+$config['footer_message'] = file_env('IPAM_FOOTER_MESSAGE', $config['footer_message']);
